--- a/portfolio.html
+++ b/portfolio.html
@@ -146,10 +146,48 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
-            <a class="footer-logo link" href="./index.html">Web<span class="span-footer">Studio</span></a>
-            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
-                growth solutions.</p>
+        <div class="container footer-container">
+            <div class="footer-logo-cont">
+                <a class="footer-logo link" href="./index.html">Web<span class="span-footer">Studio</span></a>
+                <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+                    growth solutions.</p>
+            </div>
+            <div class="social-media">
+                <p class="social-media-text">Social media</p>
+                <ul class="social-icon-list list">
+                    <li class="social-icon-list-item">
+                        <a href="" class="social-icon-list-link">
+                            <svg class="social-list-icon-footer" width="24" height="24">
+                                <use href="./images/sprite.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-icon-list-item">
+                        <a href="" class="social-icon-list-link">
+                            <svg class="social-list-icon-footer" width="24" height="24">
+                                <use href="./images/sprite.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-icon-list-item">
+                        <a href="" class="social-icon-list-link">
+                            <svg class="social-list-icon-footer" width="24" height="24">
+                                <use href="./images/sprite.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-icon-list-item">
+                        <a href="" class="social-icon-list-link">
+                            <svg class="social-list-icon-footer" width="24" height="24">
+                                <use href="./images/sprite.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            </li>
+            </ul>
+        </div>
         </div>
     </footer>
 </body>
