--- a/index.html
+++ b/index.html
@@ -53,18 +53,38 @@
                 <h2 class="value-name visually-hidden">Advantages</h2>
                     <ul class="value-name-list list">
                         <li class="value-name-item">
+                            <div class="value-icon-cont">
+                                <svg class="value-icon" width="60" height="64">
+                                    <use href="./images/sprite.svg#icon-antenna"></use>
+                                </svg>
+                            </div>
                             <h3 class="value-header">Strategy</h3>
                             <p class="value-text suptitle">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
                         </li>
                         <li class="value-name-item">
+                            <div class="value-icon-cont">
+                                <svg class="value-icon" width="60" height="64">
+                                    <use href="./images/sprite.svg#icon-clock"></use>
+                                </svg>
+                            </div>
                             <h3 class="value-header">Punctuality</h3>
                             <p class="value-text suptitle">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                         </li>
                         <li class="value-name-item">
+                            <div class="value-icon-cont">
+                                <svg class="value-icon" width="60" height="64">
+                                    <use href="./images/sprite.svg#icon-diagram"></use>
+                                </svg>
+                            </div>
                             <h3 class="value-header">Diligence</h3>
                             <p class="value-text suptitle">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                         </li>
                         <li class="value-name-item">
+                            <div class="value-icon-cont">
+                                <svg class="value-icon" width="60" height="64">
+                                    <use href="./images/sprite.svg#icon-astronaut"></use>
+                                </svg>
+                            </div>
                             <h3 class="value-header">Technologies</h3>
                             <p class="value-text suptitle">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                         </li>
