--- a/index.html
+++ b/index.html
@@ -259,50 +259,98 @@
             </div>
         </section>
     </main>
+
+    <!-------------------- MAIN ---SECTION 5 --------->
+    <section class="section customers">
+        <div class="container customers-cont">
+            <h2 class="customers-header">Customers</h2>
+            <ul class="customers-list list">
+                <li class="customers-list-item">
+                    <a href="" class="customers-link">
+                    <svg class="customers-icon">
+                        <use href="./images/sprite.svg#icon-Logo"></use>
+                    </svg>
+                    </a>
+                </li>
+                <li class="customers-list-item">
+                    <a href="" class="customers-link">
+                    <svg class="customers-icon">
+                        <use href="./images/sprite.svg#icon-Logo-1"></use>
+                    </svg>
+                    </a>
+                </li>
+                <li class="customers-list-item">
+                    <a href="" class="customers-link">
+                    <svg class="customers-icon">
+                        <use href="./images/sprite.svg#icon-Logo-2"></use>
+                    </svg>
+                    </a>
+                </li>
+                <li class="customers-list-item">
+                    <a href="" class="customers-link">
+                    <svg class="customers-icon">
+                        <use href="./images/sprite.svg#icon-Logo-3"></use>
+                    </svg>
+                    </a>
+                </li>
+                <li class="customers-list-item">
+                    <a href="" class="customers-link">
+                    <svg class="customers-icon">
+                        <use href="./images/sprite.svg#icon-Logo-4"></use>
+                    </svg>
+                    </a>
+                </li>
+                <li class="customers-list-item">
+                    <a href="" class="customers-link">
+                    <svg class="customers-icon">
+                        <use href="./images/sprite.svg#icon-Logo-5"></use>
+                    </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </section>
     <!----------------- FOOTER ------------->
     <footer class="footer">
         <div class="container footer-container">
             <div class="footer-logo-cont">
-        <a class="footer-logo link" href="./index.html">Web<span class="span-footer">Studio</span></a>
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+                <a class="footer-logo link" href="./index.html">Web<span class="span-footer">Studio</span></a>
+                <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            </div>
+            <div class="social-media">
+                <p class="social-media-text">Social media</p>
+                <ul class="social-icon-list list">
+                    <li class="social-icon-list-item">
+                        <a href="" class="social-icon-list-link">
+                            <svg class="social-list-icon-footer" width="24" height="24">
+                            <use href="./images/sprite.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-icon-list-item">
+                        <a href="" class="social-icon-list-link">
+                            <svg class="social-list-icon-footer" width="24" height="24">
+                            <use href="./images/sprite.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-icon-list-item">
+                        <a href="" class="social-icon-list-link">
+                            <svg class="social-list-icon-footer" width="24" height="24">
+                            <use href="./images/sprite.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-icon-list-item">
+                        <a href="" class="social-icon-list-link">
+                            <svg class="social-list-icon-footer" width="24" height="24">
+                            <use href="./images/sprite.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="social-media">
-            <p class="social-media-text">Social media</p>
-                                <ul class="social-icon-list list">
-                                    <li class="social-icon-list-item">
-                                        <a href="" class="social-icon-list-link">
-                                            <svg class="social-list-icon-footer" width="24" height="24">
-                                                <use href="./images/sprite.svg#icon-instagram"></use>
-                                            </svg>
-                                        </a>
-                                    </li>
-                                    <li class="social-icon-list-item">
-                                        <a href="" class="social-icon-list-link">
-                                            <svg class="social-list-icon-footer" width="24" height="24">
-                                                <use href="./images/sprite.svg#icon-twitter"></use>
-                                            </svg>
-                                        </a>
-                                    </li>
-                                    <li class="social-icon-list-item">
-                                        <a href="" class="social-icon-list-link">
-                                            <svg class="social-list-icon-footer" width="24" height="24">
-                                                <use href="./images/sprite.svg#icon-facebook"></use>
-                                            </svg>
-                                        </a>
-                                    </li>
-                                    <li class="social-icon-list-item">
-                                        <a href="" class="social-icon-list-link">
-                                            <svg class="social-list-icon-footer" width="24" height="24">
-                                                <use href="./images/sprite.svg#icon-linkedin"></use>
-                                            </svg>
-                                        </a>
-                                    </li>
-                                </ul>
-                                </div>
-                                </li>
-                                </ul>
-        </div>
-    </div>
     </footer>
 </body>
 </html>
